# stuff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  check_tidy.sh
benchmarks/: CMakeLists.txt
benchmarks/core/: CMakeLists.txt  main.cpp  string_benchmarks.cpp
benchmarks/datetime/: CMakeLists.txt  convert_benchmarks.cpp  main.cpp
benchmarks/string/: CMakeLists.txt  convert_benchmarks.cpp
cmake/: create_benchmark.cmake  create_test.cmake  stuffConfig.cmake  stuff_algorithmConfig.cmake  stuff_containerConfig.cmake  stuff_coreConfig.cmake  stuff_datetimeConfig.cmake  stuff_ioConfig.cmake  stuff_stringConfig.cmake  stuff_unicodeConfig.cmake
include/stuff/: exception.h
include/stuff/algorithm/: all.h  output.h  random.h
include/stuff/container/: byte_array.h  string_array.h
include/stuff/core/: byte_array.h  exception.h  random.h  string.h  string_array.h  unicode.h  units.h
include/stuff/datetime/: conversions.h  datetime.h  financial.h  types.h
include/stuff/io/: filesystem.h  gzip.h
include/stuff/io/detail/: iops.h
include/stuff/string/: convert.h  split.h
include/stuff/unicode/: convert.h  detect.h
src/: CMakeLists.txt  exception.cpp
src/algorithm/: CMakeLists.txt
src/container/: CMakeLists.txt
src/core/: CMakeLists.txt  exception.cpp  string.cpp  unicode.cpp
src/datetime/: CMakeLists.txt  conversions.cpp  datetime.cpp  financial.cpp
src/io/: CMakeLists.txt  filesystem.cpp  gzip.cpp
src/string/: CMakeLists.txt  split.cpp
src/unicode/: CMakeLists.txt  convert.cpp  detect.cpp
tests/: CMakeLists.txt  exception.cpp
tests/algorithm/: CMakeLists.txt  main.cpp  random_tests.cpp
tests/core/: CMakeLists.txt  exception.cpp  exception_tests.cpp  main.cpp  string.cpp  string_tests.cpp  units_tests.cpp
tests/datetime/: CMakeLists.txt  conversions_tests.cpp  datetime_tests.cpp  main.cpp
tests/io/: CMakeLists.txt  filesystem.cpp
tests/string/: CMakeLists.txt  convert.cpp  main.cpp  split_tests.cpp
